[gd_scene load_steps=43 format=3 uid="uid://cednq3isq20uq"]

[ext_resource type="Script" path="res://Game/Characters/PlayerCharacter.gd" id="1_vqyv2"]
[ext_resource type="AudioStream" uid="uid://cxr3v80lemb3w" path="res://Assets/SFX/05._Hurt_2_variation_1.wav" id="2_12cxk"]
[ext_resource type="Texture2D" uid="uid://djrl5mknxabck" path="res://Assets/Sprites/Characters/Player idle/Untitled_Artwork-1.png" id="2_gsq1n"]
[ext_resource type="Texture2D" uid="uid://dbc8hber3316c" path="res://Assets/Sprites/Characters/Player idle/Untitled_Artwork-2.png" id="3_epm22"]
[ext_resource type="AudioStream" uid="uid://dbre5kjsyr6yp" path="res://Assets/SFX/05._Hurt_2_variation_2.wav" id="3_j4a18"]
[ext_resource type="AudioStream" uid="uid://bgh0ea58131aw" path="res://Assets/SFX/05._Hurt_2_variation_3.wav" id="4_737ro"]
[ext_resource type="Texture2D" uid="uid://btl70wu67ek20" path="res://Assets/Sprites/Characters/Player idle/Untitled_Artwork-3.png" id="4_kewjc"]
[ext_resource type="Texture2D" uid="uid://b06v11c6l1yb2" path="res://Assets/Sprites/Characters/Player idle/Untitled_Artwork-4.png" id="5_ewmua"]
[ext_resource type="PackedScene" uid="uid://boihhkdc0o55y" path="res://Game/Objects/Projectiles/Bullet.tscn" id="5_y5p60"]
[ext_resource type="Texture2D" uid="uid://d3ac0m2741leh" path="res://Assets/Sprites/Characters/player_hit.png" id="6_3m1gp"]
[ext_resource type="Texture2D" uid="uid://b6qluhshkj03j" path="res://Assets/Sprites/Characters/Player walk/Untitled_Artwork-1.png" id="6_h1u13"]
[ext_resource type="Texture2D" uid="uid://b2hgouhogl1e4" path="res://Assets/Sprites/Characters/Player walk/Untitled_Artwork-2.png" id="7_picld"]
[ext_resource type="Texture2D" uid="uid://b4sh0phyyme7k" path="res://Assets/Sprites/Characters/Player walk/Untitled_Artwork-3.png" id="8_530kk"]
[ext_resource type="Texture2D" uid="uid://dpacfkm0yl7nv" path="res://Assets/Sprites/Characters/Player walk/Untitled_Artwork-4.png" id="9_apfbj"]
[ext_resource type="Texture2D" uid="uid://kagbohmm1os5" path="res://Assets/Sprites/Characters/Banana gun/Untitled_Artwork-1.png" id="10_skh1i"]
[ext_resource type="Texture2D" uid="uid://t03ano2cfrui" path="res://Assets/Sprites/Characters/Banana gun/Untitled_Artwork-2.png" id="11_lvwes"]
[ext_resource type="Texture2D" uid="uid://x6onius4m5e0" path="res://Assets/Sprites/Characters/Banana gun/Untitled_Artwork-3.png" id="12_cw2ao"]
[ext_resource type="Texture2D" uid="uid://bfiijrvslq44j" path="res://Assets/Sprites/Characters/Banana gun/Untitled_Artwork-4.png" id="13_o8h3f"]
[ext_resource type="Texture2D" uid="uid://c1aev23odi2hu" path="res://Assets/Sprites/Characters/Banana gun/Untitled_Artwork-5.png" id="14_lh07b"]
[ext_resource type="AudioStream" uid="uid://d4dur13ie051v" path="res://Assets/SFX/02._Gun_Shoot.wav" id="18_rqjiw"]
[ext_resource type="AudioStream" uid="uid://b6y0kc8c3e381" path="res://Assets/SFX/01._Wind-Up_Gun.wav" id="19_j7kyp"]
[ext_resource type="PackedScene" uid="uid://bra6tpwpgfe7d" path="res://Game/GUI/PlayerGUI.tscn" id="22_it00h"]
[ext_resource type="AudioStream" uid="uid://lfmi078m85p" path="res://Assets/SFX/20._Teleport.wav" id="23_jef64"]
[ext_resource type="AudioStream" uid="uid://ctt5gd2j7gtwq" path="res://Assets/SFX/23. Fireballs Spinning (Loop).wav" id="24_33j2m"]
[ext_resource type="AudioStream" uid="uid://4w8gs3o8r6j4" path="res://Assets/SFX/22. Fireballs Appear.wav" id="25_ipkok"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hthkk"]
atlas = ExtResource("6_3m1gp")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcol7"]
atlas = ExtResource("2_gsq1n")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0a5j1"]
atlas = ExtResource("3_epm22")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_itigl"]
atlas = ExtResource("4_kewjc")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_chk5b"]
atlas = ExtResource("5_ewmua")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_elky0"]
atlas = ExtResource("6_h1u13")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdtr"]
atlas = ExtResource("7_picld")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_23sv6"]
atlas = ExtResource("8_530kk")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn2pt"]
atlas = ExtResource("9_apfbj")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_cjqsm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hthkk")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 0.7,
"texture": SubResource("AtlasTexture_lcol7")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_0a5j1")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_itigl")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_chk5b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_elky0")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_tjdtr")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_23sv6")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_qn2pt")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kpapw"]
radius = 28.0
height = 94.0

[sub_resource type="AtlasTexture" id="AtlasTexture_f2urr"]
atlas = ExtResource("10_skh1i")
region = Rect2(0, 0, 627, 376)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8jvg"]
atlas = ExtResource("11_lvwes")
region = Rect2(0, 0, 627, 376)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvgs6"]
atlas = ExtResource("12_cw2ao")
region = Rect2(0, 0, 627, 376)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndv28"]
atlas = ExtResource("13_o8h3f")
region = Rect2(0, 0, 627, 376)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckfal"]
atlas = ExtResource("14_lh07b")
region = Rect2(0, 0, 627, 376)

[sub_resource type="SpriteFrames" id="SpriteFrames_wrcq2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2urr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 0.2,
"texture": SubResource("AtlasTexture_m8jvg")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_lvgs6")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_ndv28")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_ckfal")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("char_sprite")]
motion_mode = 1
script = ExtResource("1_vqyv2")
level = null
alliance = 1
damage_received_mult = null
hurt_sounds = Array[AudioStreamWAV]([ExtResource("2_12cxk"), ExtResource("3_j4a18"), ExtResource("4_737ro")])
char_sprite = NodePath("CharacterSprite")
bullet = ExtResource("5_y5p60")
stat_damage_received_mult = null
stat_speed_mult = null
stat_rof_mult = null
stat_bullet_damage_mult = null
stat_lifesteal = null
stat_melee_damage = null
stat_melee_cd = null

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -23)
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_cjqsm")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -8)
shape = SubResource("CapsuleShape2D_kpapw")

[node name="GunSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(41, 7)
scale = Vector2(0.125, 0.125)
sprite_frames = SubResource("SpriteFrames_wrcq2")
animation = &"idle"

[node name="GunshotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_rqjiw")

[node name="GunWindupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_j7kyp")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Player" type="Node2D" parent="."]

[node name="PlayerGUI" parent="." instance=ExtResource("22_it00h")]

[node name="FireballPlatter" type="Node2D" parent="."]
z_index = 3

[node name="Items" type="Node" parent="."]

[node name="TeleportSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("23_jef64")

[node name="FireballLoop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_33j2m")
volume_db = 4.0

[node name="FireballEngage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_ipkok")

[node name="FireballDisengage" type="AudioStreamPlayer2D" parent="."]

[connection signal="animation_looped" from="GunSprite" to="." method="_on_gun_sprite_animation_looped"]
